--- a/app/src/main/res/layout/list_people_who_responded.xml
+++ b/app/src/main/res/layout/list_people_who_responded.xml
@@ -9,12 +9,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="vertical">
+        android:layout_height="150dp"
+        android:orientation="vertical"
+        android:weightSum="50">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="35"
             android:orientation="horizontal"
             android:weightSum="6"
             android:background="@drawable/textview_border_not_curve">
@@ -71,8 +73,29 @@
                         android:layout_margin="5dp"
                         android:text="ENLIST"></com.google.android.material.button.MaterialButton>
                 </LinearLayout>
-
             </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            android:layout_weight="15"
+            android:background="@drawable/textview_border_not_curve">
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/peoplewhoresponded_text_notes"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textSize="24sp"
+                    android:inputType="textMultiLine"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimary" />
+            </ScrollView>
 
         </LinearLayout>
     </LinearLayout>
