--- a/app/src/main/res/layout/list_people_who_responded.xml
+++ b/app/src/main/res/layout/list_people_who_responded.xml
@@ -23,7 +23,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2.5"
-                android:background="@drawable/textview_border_not_curve">
+                android:background="@drawable/textview_border_not_curve"
+                android:orientation="vertical">
                 <TextView
                     android:id="@+id/peoplewhoresponded_text_responses"
                     android:layout_width="match_parent"
@@ -32,6 +33,9 @@
                     android:textSize="24sp"
                     android:textStyle="bold"
                     android:textColor="@color/colorPrimary" />
+
+
+
              </LinearLayout>
 
             <LinearLayout
@@ -73,6 +77,7 @@
                 </LinearLayout>
 
             </LinearLayout>
+
 
         </LinearLayout>
     </LinearLayout>
