--- a/app/src/main/res/layout/activity_post_new_event.xml
+++ b/app/src/main/res/layout/activity_post_new_event.xml
@@ -223,7 +223,7 @@
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
                         android:textColor="@color/colorPrimary"
-                        android:text="Date of Birth"
+                        android:text="Date of Requirement"
                         android:focusable="false"
                         android:focusableInTouchMode="false"/>
                 </LinearLayout>
