--- a/app/src/main/res/layout/activity_post_description.xml
+++ b/app/src/main/res/layout/activity_post_description.xml
@@ -334,7 +334,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     style="@style/StyleButton"
-                    android:text="Delete">
+                    android:text="Enlisted">
                 </com.google.android.material.button.MaterialButton>
             </LinearLayout>
         </LinearLayout>
